# ObjectTracking

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: installConfig.cmake  packageConfig.cmake.in
config/: visualPerceptionParameters.json
include/: kalman_box_tracker.h  kuhn_munkres.h  sort.h
include/ObjectTracking/: KalmanBoxTracker.h  KuhnMunkres.h  ObjectTracker.h
src/: KalmanBoxTracker.cpp  KuhnMunkres.cpp  ObjectTracker.cpp  kalman_box_tracker.cpp  kuhn_munkres.cpp  sort.cpp
